# neural-plugin

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpm.cmake
resources/models/: rtneural_model_lstm_32.json
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
